finishing on home page ✌🏼

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -91,57 +91,74 @@
     </div>
   </section>
 
+
+
   <!-- Gallery grid -->
   <section class="gallery">
     <div class="box-container">
   
-      <div class="box-gallery">
+      <div class="box-gallery1">
+        <h2 class="big_text_x_light">iPhone 14 Pro</h2>
+        <p class="text_light">Bortom Pro.</p>
         <ul>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <img src="/apple_store/images/home_images/h4.png" alt="">
+        <!-- <img src="/apple_store/images/home_images/h4.png" alt=""> -->
       </div>
-      <div class="box-gallery">
+
+      <div class="box-gallery2">
+        <h2 class="big_text_x_light">AirPods Pro</h2>
+        <p class="text_light">Ett förfinat mästerverk</p>
         <ul>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <img src="/apple_store/images/home_images/h5.png" alt="">
-      </div>
-    </div>
-  
-    <div class="box-container">
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h6.png" alt="">
-      </div>
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h7.png" alt="">
+        <!-- <img src="/apple_store/images/home_images/h5.png" alt=""> -->
       </div>
     </div>
   
     <div class="box-container">
-      <div class="box-gallery">
+      <div class="box-gallery3">
+        <h2 class="big_text_x_light"><i class="fa-brands fa-apple"></i>WATCH</h2>
+        <span class="red">Series 8</span>
+        <p class="text_light">Ett rejält kliv för hälsan.</p>
         <ul>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <img src="/apple_store/images/home_images/h8.png" alt="">
+        <!-- <img src="/apple_store/images/home_images/h6.png" alt=""> -->
       </div>
-      <div class="box-gallery">
+      <div class="box-gallery4">
+        <h2 class="big_text_x_dark"><i class="fa-brands fa-apple"></i>WATCH</h2>
+        <span class="red">Ultra</span>
+        <p class="text_dark">Nu börjar äventyret.</p>
         <ul>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <img src="/apple_store/images/home_images/h9.png" alt="">
+        <!-- <img src="/apple_store/images/home_images/h7.png" alt=""> -->
+      </div>
+    </div>
+  
+    <div class="box-container">
+      <div class="box-gallery5">
+        <h2 class="big_text_x_light">iPad Pro</h2>
+        <p class="text_light">Superladdad med M2.</p>
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
+        <!-- <img src="/apple_store/images/home_images/h8.png" alt=""> -->
+      </div>
+      <div class="box-gallery6">
+        <h2 class="big_text_x_dark"><i class="fa-brands fa-apple"></i>TV<span class="rainbow">4K</span></h2>
+        <p class="text_dark">Lekfull. Ritsugen. Magisk.</p>
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
+        <!-- <img src="/apple_store/images/home_images/h9.png" alt=""> -->
       </div>
   
     </div>
