changed text size and link fix hover effects

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -70,7 +70,7 @@
   <section class="presentcard">
     <div class="content">
       <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
-      <p class="text_light">Sista minuten-knappar som varar länge.</p>
+      <p class="text_light_y">Sista minuten-knappar som varar länge.</p>
 
       <ul>
         <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
@@ -83,7 +83,7 @@
   <section class="about_ipad">
     <div class="content_right">
       <h2 class="big_text_x">iPad</h2>
-      <p class="text_dark">Lekfull. Ritsugen. Magisk.</p>
+      <p class="text_dark_y">Lekfull. Ritsugen. Magisk.</p>
       <ul>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
         <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
