--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -61,8 +61,6 @@
         <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
-    </div>
-
   </section>
 
   <!-- Presentcard section -->
@@ -104,7 +102,6 @@
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <!-- <img src="/apple_store/images/home_images/h4.png" alt=""> -->
       </div>
 
       <div class="box-gallery2">
@@ -114,30 +111,27 @@
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <!-- <img src="/apple_store/images/home_images/h5.png" alt=""> -->
       </div>
     </div>
   
     <div class="box-container">
       <div class="box-gallery3">
         <h2 class="big_text_x_light"><i class="fa-brands fa-apple"></i>WATCH</h2>
-        <span class="red">Series 8</span>
+        <span class="red">SERIES 8</span>
         <p class="text_light">Ett rejält kliv för hälsan.</p>
         <ul>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <!-- <img src="/apple_store/images/home_images/h6.png" alt=""> -->
       </div>
       <div class="box-gallery4">
         <h2 class="big_text_x_dark"><i class="fa-brands fa-apple"></i>WATCH</h2>
-        <span class="red">Ultra</span>
+        <span class="orange">ULTRA</span>
         <p class="text_dark">Nu börjar äventyret.</p>
         <ul>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <!-- <img src="/apple_store/images/home_images/h7.png" alt=""> -->
       </div>
     </div>
   
@@ -149,7 +143,6 @@
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <!-- <img src="/apple_store/images/home_images/h8.png" alt=""> -->
       </div>
       <div class="box-gallery6">
         <h2 class="big_text_x_dark"><i class="fa-brands fa-apple"></i>TV<span class="rainbow">4K</span></h2>
@@ -158,9 +151,7 @@
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
-        <!-- <img src="/apple_store/images/home_images/h9.png" alt=""> -->
       </div>
-  
     </div>
   </section>
 
