New image added and commit small changes

--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -317,14 +317,19 @@
 
   <!-- Presentcard -->
 
-  <section class="about presentcard">
-    <div class="content">
+  <section class="presentcard_mac">
+    <div class="content_left">
 
       <ul>
         <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
+    <div class="content_right">
 
+      <ul>
+        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
+      </ul>
+    </div>
   </section>
 
   <!-- Gallery grid -->
