finish presentcard box

--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -319,16 +319,15 @@
 
   <section class="presentcard_mac">
     <div class="content_left">
+      <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
+      <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
+      <p class="text_light_y">Sista minuten-knappar som varar länge.</p>
 
       <ul>
         <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
     <div class="content_right">
-
-      <ul>
-        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
     </div>
   </section>
 
