More similar padding on the iphone page

--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -32,11 +32,11 @@
     <!-- Menu icon -->
     <div id="menu-btn" class="fa-solid fa-bars"></div>
     <!-- Logo -->
-    <a href="#home" class="logo"><i class="fa-brands fa-apple"></i></a>
+    <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
     <!-- Navigation menu -->
     <nav class="navbar">
       <ul class="nav-items">
-        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
         <li class="nav-item"><a href="ipad.html">iPad</a></li>
         <li class="nav-item"><a href="iphone.html">iPhone</a></li>
@@ -78,7 +78,7 @@
     <img src="images/iphone_images/Capture2.PNG" alt="">
   </section>
 
-  <section class="big-card" style="background-color: #FBFBFD; padding-top: 50px; display: flex; justify-content: center; align-items: center; gap: 50px;">
+  <section class="big-card" style="background-color: #FBFBFD; padding-top: 15px; display: flex; justify-content: center; align-items: center; gap: 50px;">
     <div style="padding-right: 5vw;">
     <p style="font-size: 20px; font-weight: bold;">iPhone SE</p>
     <p class="fancy" style="margin: 0 auto; width: fit-content; font-size: 48px; font-weight: bolder; background: -webkit-linear-gradient(90deg,#1e3791 0%,#2948b1 40%,#3153c6 55%,#214fe7 60%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Känn kraften. <br>Se priset.</p>
@@ -325,7 +325,12 @@
 
         </div>
       </div>
-
+    </div>
+    <div>
+      <ul>
+        <li><a href="">Jämför alla iPhone-modeller <i class="fa-solid fa-angle-right"></i></a></li>
+        <li><a href="">Köp iPhone <i class="fa-solid fa-angle-right"></i></a></li>
+      </ul>
     </div>
   </section>
 
