Added 2 links last minute

--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -76,7 +76,7 @@
 
   <!-- Products iPads -->
 
-  <section>
+  <section class="table">
     <h2 class="table-headline">Vilken iPad passar dig bäst?</h2>
     
     <div class="phone-table">
@@ -109,7 +109,7 @@
           <h4>Nyhet</h4>
           <h2>iPad</h2>
           <p>Helt nya, färgglada iPad <br>för det du gör varje dag.</p>
-          <p class="price">Från 8 995 kr</p>
+          <p class="price">Från 6 595 kr</p>
           <button>Köp</button><br>
           <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
         </div>
@@ -121,7 +121,7 @@
             <h4>Nyhet</h4>
             <h2>iPad mini</h2>
             <p>Hela upplevelsen med iPad<br>designad för att passa i en hand.</p>
-            <p class="price">Från 6 495 kr</p>
+            <p class="price">Från 7 495 kr</p>
             <button>Köp</button><br>
             <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
         </div> 
