deleted all old comments/codes on all pages

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -9,20 +9,10 @@
   <!-- SCSS link-->
   <link rel="stylesheet" href="styles/style.css">
   <!-- Font Awesome-->
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
   <!-- JS file link -->
-
   <script src="scripts/script.js" defer></script>
 
-  <!-- Links to partners carousel slider -->
-  <!-- <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.carousel.min.css"
-    rel="stylesheet">
-  <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.theme.default.min.css"
-    rel="stylesheet">
-  <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/vendors/jquery.min.js"></script>
-  <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/owl.carousel.js"></script> -->
 </head>
 
 <body>
@@ -43,8 +33,7 @@
         <li class="nav-item"><a href="support.html">Support</a></li>
       </ul>
     </nav>
-    <!-- Bookings button -->
-    <!-- <a href="#" class="logo"><i class="fa-solid fa-magnifying-glass"></i></a> -->
+    <!-- Shopping button -->
     <a href="#" class="logo"><i class="fa-solid fa-bag-shopping"></i></a>
   </header>
 
@@ -94,7 +83,7 @@
   <!-- Gallery grid -->
   <section class="gallery">
     <div class="box-container">
-  
+
       <div class="box-gallery1">
         <h2 class="big_text_x_light">iPhone 14 Pro</h2>
         <p class="text_light">Bortom Pro.</p>
@@ -113,7 +102,7 @@
         </ul>
       </div>
     </div>
-  
+
     <div class="box-container">
       <div class="box-gallery3">
         <h2 class="big_text_x_light"><i class="fa-brands fa-apple"></i>WATCH</h2>
@@ -134,7 +123,7 @@
         </ul>
       </div>
     </div>
-  
+
     <div class="box-container">
       <div class="box-gallery5">
         <h2 class="big_text_x_light">iPad Pro</h2>
@@ -223,186 +212,6 @@
     <span class="dot"></span>
     <span class="dot"></span>
   </div>
-
-  <!-- <div class="owl">
-    <div class="owl-carousel owl-theme owl-loaded owl-drag">
-
-      <div class="owl-stage-outer">
-
-        <div class="owl-stage">
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/movie/emancipation/umc.cmc.1j6fdxookwtqml3bd8ivvcbbv?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h10.png"
-                  alt="emancipation"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/slow-horses/umc.cmc.2szz3fdt71tl1ulnbp8utgq5o?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h11.png"
-                  alt="slow horses"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/movie/spirited/umc.cmc.3lp7wqowerzdbej98tveildi3?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h12.png" alt="spirited"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/shantaram/umc.cmc.atxsrive40xli3zh3uxjimut?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h13.png"
-                  alt="shantaram"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/movie/selena-gomez-my-mind--me/umc.cmc.39yw4dp13gshxq5bt9fsl0o5y?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h14.png"
-                  alt="Selena gomez my mind and me"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/echo-3/umc.cmc.mzqa5sj4m2i80g51cgu04i3j?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h15.png"
-                  alt="echo 3"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/the-mosquito-coast/umc.cmc.5nghmxp88xe0qxhtlhfiu5r2h?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h16.png"
-                  alt="the mosquito coast"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/ted-lasso/umc.cmc.vtoh0mn0xn7t3c643xqonfzy?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h17.png"
-                  alt="ted lasso"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/see/umc.cmc.3s4mgg2y7h95fks9gnc4pw13m?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img
-                  src="images/home_images/h18.png" alt="see"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/severance/umc.cmc.1srk2goyh2q2zdxcx605w8vtx?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h19.png" alt="severance"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- Destinations -->
-
-  <!-- <section class="destination" id="destination">
-    <div class="heading">
-      <span>Our packages includes</span>
-      <h2>Luxury for You</h2>
-    </div>
-
-    <div class="box-container">
-
-      <div class="box">
-        <div class="image">
-          <img src="images/b4.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury yachts</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p16.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury limousine</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p18.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury stays</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p12.webp" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury wedding</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p14.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury places</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p24.jpg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury views</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p21.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury hotels</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p10.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury dinings</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-    </div>
-
-  </section> -->
 
   <!-- Footer -->
   <footer>
