--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -8,22 +8,11 @@
   <title>Apple project</title>
   <!-- SCSS link-->
   <link rel="stylesheet" href="styles/style.css">
-  
   <!-- Font Awesome-->
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
   <!-- JS file link -->
-
   <script src="scripts/script.js" defer></script>
 
-  <!-- Links to partners carousel slider -->
-  <!-- <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.carousel.min.css"
-    rel="stylesheet">
-  <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.theme.default.min.css"
-    rel="stylesheet">
-  <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/vendors/jquery.min.js"></script>
-  <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/owl.carousel.js"></script> -->
 </head>
 
 <body>
@@ -44,8 +33,7 @@
         <li class="nav-item"><a href="support.html">Support</a></li>
       </ul>
     </nav>
-    <!-- Bookings button -->
-    <!-- <a href="#" class="logo"><i class="fa-solid fa-magnifying-glass"></i></a> -->
+    <!-- Shopping button -->
     <a href="#" class="logo"><i class="fa-solid fa-bag-shopping"></i></a>
   </header>
 
