--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -9,9 +9,7 @@
   <!-- SCSS link-->
   <link rel="stylesheet" href="styles/style.css">
   <!-- Font Awesome-->
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
   <!-- JS file link -->
   <script src="scripts/script.js" defer></script>
 
@@ -35,8 +33,7 @@
         <li class="nav-item"><a href="support.html">Support</a></li>
       </ul>
     </nav>
-    <!-- Bookings button -->
-    <!-- <a href="#" class="logo"><i class="fa-solid fa-magnifying-glass"></i></a> -->
+    <!-- Shopping button -->
     <a href="#" class="logo"><i class="fa-solid fa-bag-shopping"></i></a>
   </header>
 
