Tagit bort mer inline styling

--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -96,7 +96,7 @@
     <h2 class="table-headline">Vilken iPhone passar dig?</h2>
     
     <div class="phone-table">
-      <div class="col" class="col1">
+      <div class="col col1">
         <div class="thead">
           <img src="images/iphone_images/iphone14pro.png" alt="">
           <h4>Nyhet</h4>
@@ -153,7 +153,7 @@
         </div>
       </div>
 
-      <div class="col" class="col2">
+      <div class="col col2">
         <div class="thead">
           <img src="images/iphone_images/iphonepro.png" alt="">
           <h4>Nyhet</h4>
