home and mac pages done

--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -414,8 +414,8 @@
   </section>
 
   <!-- Mac big image center page -->
-  <section class="content">
-    <div class="content">
+  <section class="content_gallery-center-image">
+    <div class="content_mac">
       <h2>Förinstallerade appar</h2>
       <p>Varje Mac har kraftfulla verktyg för att skapa och få mer gjort. Appar som hjälper dig att utforska,
         kommunicera
@@ -440,8 +440,8 @@
     </div>
   </section>
 
-  <section class="content">
-    <div class="content">
+  <section class="content_gallery-center-image">
+    <div class="content_mac">
       <h2>Proffsappar</h2>
       <p>Proffs som är redo att ta sin kreativitet till nästa nivå kan använda de här bransch­ledande apparna för att få maximal
       kontroll över redi­gering, bearbetning och produktion av musik och film.</p>
