--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -321,7 +321,7 @@
       </ul>
   </section>
 
-  <section class="presentcard_mac" style="max-width: 1500px; margin: 0 auto">
+  <section class="presentcard_mac">
     <div class="content_left">
       <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
       <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
