--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -67,48 +67,57 @@
   <section class="table">
     <h2 class="table-headline">Vilken iPad passar dig bäst?</h2>
     
-    <div class="phone-table">
-      <div class="col col1">
+    <div class="ipad-table">
+      <div class="col col21">
         <div class="thead">
           <img src="images/ipad_images/1001.png" alt="">
           <h4>Nyhet</h4>
           <h2>iPad Pro</h2>
-          <p>Den bästa upplevelsen av iPad<br>med den mest avancerade tekniken.</p>
+          <h3 class="hide">heh</h3>
+          <p>Den bästa upplevelsen</p>
+          <p>av iPad med den mest</p>
+          <p>avancerade tekniken.</p>
           <p class="price">Från 11 995 kr</p>
           <button>Köp</button><br>
           <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
         </div>
       </div>
 
-      <div class="col col3">
+      <div class="col col22">
         <div class="thead">
           <img src="images/ipad_images/1002.png" alt="">
           <h4>Nyhet</h4>
           <h2>iPad Air</h2>
-          <p>Tung prestanda i en<br>tunn och lätt design.</p>
+          <h3 class="hide">heh</h3>
+          <p>Tung prestanda i en</p>
+          <p>tunn och lätt design</p>
+          <p class="hide">p</p>
           <p class="price">Från 8 795 kr</p>
           <button>Köp</button><br>
           <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
         </div>
       </div>
 
-      <div class="col col2">
+      <div class="col col23">
         <div class="thead"><img src="images/ipad_images/1003.png" alt="">
           <h4>Nyhet</h4>
           <h2>iPad</h2>
-          <p>Helt nya, färgglada iPad <br>för det du gör varje dag.</p>
+          <h3>(tionde generationen)</h3>
+          <p>Helt nya, färgglada <br>iPad för det du gör <br>varje dag.</p>
+          
           <p class="price">Från 6 595 kr</p>
           <button>Köp</button><br>
           <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
         </div>
       </div>
 
-      <div class="col col4">
+      <div class="col col24">
         <div class="thead">
           <img src="images/ipad_images/1004.png" alt="">
             <h4>Nyhet</h4>
             <h2>iPad mini</h2>
-            <p>Hela upplevelsen med iPad<br>designad för att passa i en hand.</p>
+            <h3 class="hide">heh</h3>
+            <p>Hela upplevelsen med <br>iPad designad för att <br>passa i en hand.</p>
             <p class="price">Från 7 495 kr</p>
             <button>Köp</button><br>
             <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
@@ -233,7 +242,7 @@
     </div>
   </section>
 
-  Change iPad text
+  
   <section class="about change_ipad_text">
     <div class="content_text">
       <h2 class="big_text_xl">Byt in din iPad och få ett lägre pris på en ny.</h2>
