--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -245,7 +245,7 @@
   </section>
 
   <!-- Change iPad text -->
-  <section class="about change_ipad_text">
+  <!-- <section class="change_ipad_text">
     <div class="content_text">
       <h2 class="big_text_xl">Byt in din iPad och få ett lägre pris på en ny.</h2>
       <p class="text_dark">Med Apple Trade In kan du byta in din iPad och få ett tillgodohavande när du köper en ny. Det är bra för dig. Och för planeten.1</p>
@@ -254,11 +254,37 @@
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
-  </section>
+  </section> -->
+
+  <!-- <section class="change_ipad_text">
+    <div class="content_text">
+      <h2 class="big_text_xl">Byt in din iPad och få ett lägre pris på en ny.</h2>
+      <p class="text_dark">Med Apple Trade In kan du byta in din iPad och få ett tillgodohavande när du köper en ny. Det är
+        bra för dig. Och för planeten.1</p>
+    
+      <ul>
+        <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+      </ul>
+    </div>
+  
+  </section> -->
+
+    <!-- <div class="change_ipad"></div> -->
 
     <!-- Change iPad picture -->
     <section class="change_ipad">
-      <div class="content">
+      <div class="content_text">
+        <h2 class="big_text_xl">Byt in din iPad och få ett lägre pris på en ny.</h2>
+        <p class="text_dark">Med Apple Trade In kan du byta in din iPad och få ett tillgodohavande när du köper en ny. Det är
+          bra för dig. Och för planeten.1</p>
+      
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
+      </div>
+
+
+
           <!-- <h2 class="big_text_xl_ipad">Byt in din iPad och få ett lägre pris på en ny.</h2>
           <p class="text_dark">Med Apple Trade In kan du byta in din iPad och få ett tillgodohavande när du köper en ny. Det är
             bra för dig. Och för planeten.1</p>
@@ -266,7 +292,6 @@
           <ul>
             <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
           </ul> -->
-      </div>
     </section>
 
       <section class="mac_info-box">
