Finished work margin and padding on home and mac pages

--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -73,7 +73,7 @@
 
   <!-- Mac product section -->
   <section class="table">
-    <h2 class="table-headline">Vilken Mac passar dig?</h2>
+    <h2 class="big_text_x">Vilken Mac passar dig bäst?</h2>
   
     <div class="mac-table">
       <div class="col col31">
