Watch table, small semantic changes to all tables

--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -64,7 +64,7 @@
 
   <!-- Products iPads -->
 
-  <section class="table">
+  <section class="table ipad-wrapper">
     <h2 class="table-headline">Vilken iPad passar dig bäst?</h2>
     
     <div class="ipad-table">
