--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -80,7 +80,7 @@
     <img src="images/iphone_images/Capture3.PNG" alt="">
   </section>
 
-  <section class="table">
+  <section class="table iphone-wrapper">
     <h2 class="table-headline">Vilken iPhone passar dig?</h2>
     
     <div class="phone-table">
