--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -72,8 +72,8 @@
 
 
   <!-- Mac product section -->
-  <section class="table">
-    <h2 class="table-headline">Vilken Mac passar dig?</h2>
+  <section class="table mac-wrapper">
+    <h2 class="table-headline">Vilken Mac passar dig bäst?</h2>
   
     <div class="mac-table">
       <div class="col col31">
