--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -51,9 +51,25 @@
     </div>
   </section>
 
+<!-- Ipad section-->
+
+<section class="presentcard_mac">
+  <div class="content_left">
+    <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
+    <p class="text_light_y">Sista minuten-knappar som varar länge.</p>
+
+    <ul>
+      <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
+    </ul>
+  </div>
+  <div class="content_right">
+  </div>
+</section>
+
+
 
   <!-- Ipad section -->
-  <section class="about ipad">
+  <!-- <section class="about ipad">
     <div class="content">
 
       <ul>
@@ -62,7 +78,7 @@
       </ul>
     </div>
 
-  </section>
+  </section> -->
 
   <!-- Products iPads -->
 
