--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -362,7 +362,7 @@
     </ul>
   </section>
 
-  <!-- Presentcard -->
+  <!-- Presentcard Mac-->
 
   <section class="presentcard_mac">
     <div class="content_left">
