Small changes on ipad pictures

--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -54,8 +54,10 @@
 
   <!-- Ipad section -->
   <section class="about ipad">
-    <div class="content">
-
+    <div class="content_about_ipad">
+      <h2 class="big_text_xl_light">iPad Pro</h2>
+      <h3>Superladdad med</h3>
+      <p class="price_buy">Från 11 995 kr</p>
       <ul>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
         <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
@@ -66,7 +68,7 @@
 
   <!-- Products iPads -->
 
-  <section class="table ipad-wrapper">
+  <section class="table">
     <h2 class="table-headline">Vilken iPad passar dig bäst?</h2>
     
     <div class="ipad-table">
