small changes media querys

--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -40,7 +40,7 @@
 
   <!-- Home section -->
 
-  <section class="home" id="home">
+  <section class="home_support" id="home">
     <div class="content">
 
       <ul>
