--- a/Apple_store/watch.html
+++ b/Apple_store/watch.html
@@ -39,7 +39,7 @@
 
   <!-- Home section -->
 
-  <section class="home" id="home">
+  <section class="home_watch" id="home">
     <div class="content">
 
       <ul>
