Tagit bort fixed navbar samt padding på footer

--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -38,7 +38,7 @@
   </header>
 
   <!-- Ribbon -->
-  <div class="ribbon-wrapper" style="margin-top: 63px; text-align: center; width: 100%; padding: 16px 1px; background-color: #dfdfdf;">
+  <div class="ribbon-wrapper" style="text-align: center; width: 100%; padding: 16px 1px; background-color: #dfdfdf;">
     <p style="font-size: 14px;">Gratis leverans senast 24/12 av varor i lager som beställs senast 21/12. Se leveransdatum och alternativ i kassan.</p>
   </div>
 
