Mob-programmerat, Stylar sidor med universellt

--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -14,7 +14,7 @@
   <script src="scripts/script.js" defer></script>
 </head>
 
-<body>
+<body class="body-ipad">
   <!-- Header -->
   <header class="header">
     <!-- Menu icon -->
@@ -69,7 +69,7 @@
 
   <!-- Products iPads -->
 
-  <section class="table">
+  <section class="table ipad-t">
     <h2 class="table-headline">Vilken iPad passar dig bäst?</h2>
     
     <div class="ipad-table">
