--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body class="body-iphone">
   <!-- Header -->
   <header class="header">
     <!-- Menu icon -->
@@ -333,6 +333,31 @@
     </div>
     <div class="content_right">
     </div>
+  </section>
+
+  <!-- Iformation section -->
+  <section class="mac_info-box grey_info_background">
+
+    <div class="mac-info">
+      <i class="fa-solid fa-box-open"></i>
+      <h4>Gratis leverans</h4>
+      <p>
+        Fri retur ingår. Se leveransdatum
+        vid utcheckningen.
+      </p>
+      <li class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+    </div>
+
+    <div class="mac-info">
+      <i class="fa-regular fa-comments"></i>
+      <h4>Få hjälp med att handla</h4>
+      <p>
+        Har du frågor? Ring en specialist eller chatta online.
+        Ring 020‑120 99 71.
+      </p>
+      <li class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></li>
+    </div>
+
   </section>
 
   <!-- Footer -->
