Finalized Ipad, added 2/6 boxes on Watch as well

--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -150,17 +150,6 @@
       <div class="content_right">
       </div>
     </section>
-  
-  <section class="presentcard">
-    <div class="content">
-      <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
-      <p class="text_light">Sista minuten-knappar som varar länge.</p>
-  
-      <ul>
-        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
-  </section>
 
     <!-- Change iPad picture -->
     <section class="change_ipad">
@@ -174,6 +163,8 @@
         </ul>
       </div>
     </section>
+
+    <!-- Information boxes ipad page -->
 
       <section class="ipad_info-box">
       
