--- a/Apple_store/watch.html
+++ b/Apple_store/watch.html
@@ -63,17 +63,6 @@
 
   </section>
 
-  <!-- Presentcard -->
-
-  <section class="about presentcard">
-    <div class="content">
-
-      <ul>
-        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
-
-  </section>
 
   <!-- Watch product section -->
   <section class="table watch-wrapper">
@@ -417,6 +406,32 @@
     <span class="dot"></span>
     <span class="dot"></span>
   </div>
+
+  <!-- Present card -->
+    <section class="presentcard_mac">
+      <div class="content_left">
+        <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
+        <p class="text_light_y">Sista minuten-knappar som varar länge.</p>
+      
+        <ul>
+          <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
+      </div>
+      <div class="content_right">
+      </div>
+    </section>
+
+  <!-- Information boxes ipad page -->
+
+    <section class="watch_info-box">
+          
+      <div class="watch-info">
+        <i class="fa-solid fa-box-open"></i>
+        <h4>Snabb leverans eller hämtning i butik</h4>
+        <p>Välj gratis leverans eller hämta varor som finns i lager på närmaste Apple Store.</p>
+        <li class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+      </div>          
+    </section>
 
   <!-- Footer -->
   <footer>
