--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <!-- Header -->
-  <header class="header">
+  <header class="header activ-header">
     <!-- Menu icon -->
     <div id="menu-btn" class="fa-solid fa-bars"></div>
     <!-- Logo -->
