--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -17,15 +17,21 @@
 
 <body>
   <!-- Header -->
-  <header class="header">
+  <header class="header activ-header">
     <!-- Menu icon -->
     <div id="menu-btn" class="fa-solid fa-bars"></div>
     <!-- Logo -->
     <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
     <!-- Navigation menu -->
     <nav class="navbar">
+      <div class="nav_items_xmark">
+        <a href="support.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
+  
+        <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
+      </div>
+  
       <ul class="nav-items">
-        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
         <li class="nav-item"><a href="ipad.html">iPad</a></li>
         <li class="nav-item"><a href="iphone.html">iPhone</a></li>
