--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -24,6 +24,12 @@
     <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
     <!-- Navigation menu -->
     <nav class="navbar">
+      <div class="nav_items_xmark">
+        <a href="index.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
+
+        <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
+      </div>
+
       <ul class="nav-items">
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
