Work on support page

--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -46,15 +46,43 @@
 
   <!-- Home section -->
 
-  <section class="home_support" id="home">
-    <div class="content">
-
-      <ul>
-        <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-        <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
+  <section class="home_support">
+    <div class="content_support">
+      <h1 class="big_text_xl_0">Apple-supporten</h1>
     </div>
+  </section>
 
+  <!-- Image section nav -->
+
+  <section class="support_img_nav">
+    <div class="img_nav_support">
+      <a class="img_nav" href=""><i class="fa-solid fa-mobile-screen-button"></i><span>iPhone</span></a>
+      <a class="img_nav" href=""><i class="fa-solid fa-laptop"></i><span>Mac</span></a>
+      <a class="img_nav" href=""><i class="fa-solid fa-tablet-screen-button"></i><span>iPad</span></a>
+      <a class="img_nav" href=""><i class="fa-regular fa-clock"></i><span>Watch</span></a>
+    </div>
+  </section>
+
+  <!-- Link section nav -->
+
+  <section class="support_link_nav">
+    <div class="img_link_support">
+      <a class="img_link_nav" href="#"><i class="fa-regular fa-pen-to-square"></i><span class="link_nav">Glömt Apple-ID eller lösenord</span></a>
+      <a class="img_link_navix" href="#"><i class="fa-solid fa-screwdriver"></i></i><span class="link_nav">Apple-reparation</span></a>
+      <a class="img_link_nav" href="#"><i class="fa-solid fa-file-invoice"></i><span class="link_nav">Fakturering och prenumerationer</span></a>
+    </div>
+  </section>
+
+  <!-- Search section -->
+
+  <section class="support_search">
+    <div class="search-container">
+      <h3>Sök efter ämnen</h3>
+      <form class="form_search" action="#">
+        <button type="submit"><i class="fa fa-search"></i></button>
+        <input type="text" placeholder="Sök i supporten" name="search">
+      </form>
+    </div>
   </section>
 
 
