🏎️ navbar mobil an search plus media first page

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -30,6 +30,16 @@
         <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
       </div>
 
+      <div class="mob_nav_search" id="nav_search">
+        <div class="search-container">
+          <form class="form_search" action="#">
+            <button type="submit"><i class="fa fa-search"></i></button>
+            <input type="text" placeholder="Sök på apple.com" name="search">
+          </form>
+        </div>
+      </div>
+
+
       <ul class="nav-items">
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
