--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -56,10 +56,10 @@
 
   <section class="support_img_nav">
     <div class="img_nav_support">
-      <a class="img_nav" href=""><i class="fa-solid fa-mobile-screen-button"></i><span>iPhone</span></a>
-      <a class="img_nav" href=""><i class="fa-solid fa-laptop"></i><span>Mac</span></a>
-      <a class="img_nav" href=""><i class="fa-solid fa-tablet-screen-button"></i><span>iPad</span></a>
-      <a class="img_nav" href=""><i class="fa-regular fa-clock"></i><span>Watch</span></a>
+      <a class="img_nav" href=""><img style="height: 50px; width: 54px;" src="images/support_images/ic1.png" alt=""><span>iPhone</span></a>
+      <a class="img_nav" href=""><img style="height: 50px; width: 79px;" src="images/support_images/ic2.png" alt=""><span>Mac</span></a>
+      <a class="img_nav" href=""><img style="height: 55px; width: 57px;"src="images/support_images/ic3.png" alt=""><span>iPad</span></a>
+      <a class="img_nav" href=""><img style="height: 50px; width: 33px;" src="images/support_images/ic4.png" alt=""><span>Watch</span></a>
     </div>
   </section>
 
@@ -67,9 +67,9 @@
 
   <section class="support_link_nav">
     <div class="img_link_support">
-      <a class="img_link_nav" href="#"><i class="fa-regular fa-pen-to-square"></i><span class="link_nav">Glömt Apple-ID eller lösenord</span></a>
-      <a class="img_link_navix" href="#"><i class="fa-solid fa-screwdriver"></i></i><span class="link_nav">Apple-reparation</span></a>
-      <a class="img_link_nav" href="#"><i class="fa-solid fa-file-invoice"></i><span class="link_nav">Fakturering och prenumerationer</span></a>
+      <a class="img_link_nav" href="#"><img style="height: 37px; width: 52px;" src="images/support_images/ic5.png" alt=""><span class="link_nav">Glömt Apple-ID eller lösenord</span></a>
+      <a class="img_link_navx" href="#"><img style="height: 48px; width: 48px;"  src="images/support_images/ic6.png" alt=""><span class="link_nav">Apple-reparation</span></a>
+      <a class="img_link_nav" href="#"><img style="height: 42px; width: 31px;"  src="images/support_images/ic7.png" alt=""><span class="link_nav">Fakturering och prenumerationer</span></a>
     </div>
   </section>
 
